# talent-scout

./: .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml  todo.txt
configuration/: base.toml
core/: Cargo.toml
core/fixtures/: match_v5.match_bot.json
core/src/: application.rs  config.rs  main.rs  telemetry.rs
core/src/db/: db.rs  migrations.rs  mod.rs
core/src/db/mapper/: match_v5.rs  mod.rs  util.rs
core/src/db/query/match_v5/: matches.rs  mod.rs
core/src/db/table/: bans.rs  challenges.rs  matches.rs  missions.rs  mod.rs  objectives.rs  participant_perks.rs  participants.rs  perk_style_selections.rs  perk_styles.rs  sea_orm_active_enums.rs
data/: match_v5.match_arena.json
ingestion/: Cargo.toml
ingestion/app/: Cargo.toml
ingestion/app/src/: lib.rs
ingestion/app/src/account_v1/: ingestion.rs
ingestion/app/src/league_v4/: ingest.rs
ingestion/app/src/match_v5/: ingest.rs
ingestion/client/: Cargo.toml
ingestion/src/: lib.rs
ingestion/src/match_v5/: challenges.rs  ingest.rs  match_.rs  mod.rs  participant.rs  perks.rs
migrations/: 0000_create_schemas.sql  0001_create_types.sql  0002_create_table_match_v5_matches.sql  0003_create_table_match_v5_participants.sql  0004_create_table_match_v5_challenges.sql  0005_create_table_match_v5_missions.sql  0006_create_table_match_v5_perks.sql  0007_create_table_match_v5_teams.sql  0008_create_table_match_v5_timeline.sql  0009_create_table_match_v5_frames.sql  0010_create_table_match_v5_events.sql  0011_create_table_account_v1_account.sql  0012_create_table_league_v4_league_entry.sql  001_create_schema_match_v5.sql  002_create_table_match_v5_match.sql  003_create_table_match_v5_participant.sql  004_create_table_match_v5_challenges.sql  005_create_table_match_v5_perks.sql
persistence/: Cargo.toml
persistence/src/: config.rs  lib.rs  migrations.rs
persistence/src/mapper/: match_v5.rs  mod.rs  util.rs
persistence/src/mapper/account_v1/: account.rs
persistence/src/mapper/league_v4/: league_entry.rs
persistence/src/mapper/match_v5/: match.rs  mod.rs  timeline.rs
persistence/src/query/: mod.rs
persistence/src/query/account_v1/: accounts.rs
persistence/src/query/league_v4/: league_entry.rs  mod.rs
persistence/src/query/match_v5/: matches.rs  mod.rs  timeline.rs
persistence/src/table/: events_timeline.rs  feats.rs  match_timeline_victim_damage.rs  mod.rs  perk_styles.rs  sea_orm_active_enums.rs  timeline.rs  timeline_participants.rs
persistence/src/table/account_v1/: accounts.rs  mod.rs
persistence/src/table/league_v4/: league_item.rs  mini_series.rs  mod.rs
persistence/src/table/match_v5/: bans.rs  champion_stats.rs  damage_stats.rs  frames.rs  missions.rs  mod.rs  participant_perks.rs  sea_orm_active_enums.rs  teams.rs  timeline_participant_frames.rs  timelines.rs
scripts/: compose-up.sh  generate_from_template.sh  hard_reset_db.sh  reset_db_from_backup.sh
