[package]
name = "talent-scout"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.97"
config = "0.15.11"
dotenvy = "0.15.7"
ingestion-app = { path = "../ingestion/app" }
once_cell = "1.21.1"
persistence = { path = "../persistence" }
riven = { version = "2.66.0" }
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

