[package]
name = "ingestion"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
futures = "0.3.31"
riven = { version = "2.66.0", features = ["tracing", "metrics"] }
tokio = "1.44.1"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
]
